# gatk_requestor

./: .gitignore  Containerfile  Dockerfile  README.md  Snakefile  Vagrantfile  check_range.py  docker_build.sh  docker_build_sandbox_push.sh  getting_started.md  minify.py  minify.smk  pyproject.toml  requirements.txt  vagrant_provisioning.txt  yagna_pod_template.yaml
agents/: hello_golem.py
benchmarks/: hc_intervals.sh  view_hc.sh
coacervate/: Dockerfile  requestor_manifest.yaml  start.sh
coacervate/benchmarks/: gather_benchmarks.py
coacervate/config/: config.yml
coacervate/workflow/: Snakefile
coacervate_requestor/: Dockerfile
coacervate_requestor/config/: config.yml
config/: Snakefile  full_sample.smk  split_by_chrom.smk  utils.py
config/benchmarks/: gather_benchmarks.py
container/: Containerfile  env.yml  test_image.sh
data/: requirements.txt
data/run/: __init__.py  config.py  (+1 more)
flyte_wf/: README.md
golem/: Containerfile  haplotypecaller.Containerfile
helm/: .helmignore  requestor_job.yaml  test_job.yaml  test_values.yaml  values.yaml
k8s/: hello_job.yaml  requestor_deployment.yaml  requestor_pv.yaml  requestor_pvc.yaml  snakemake_job.yaml  yagna_deployment.yaml  yagna_svc.yaml
manifests/: requestor_pvc.yaml  yagna_deployment.yaml  yagna_svc.yaml
requestor/: Containerfile  Dockerfile  smk.Containerfile  start.sh
snakemake/: Containerfile
src/: requirements.txt
test_assets/: checkers.py  common.py  runners.py
tests/: common.py  config.py  runners.py  test_build.py  test_call_variants.py  test_combine_region.py  test_devnet_requestor.py  test_gather_vcfs.py  test_genotype.py  test_goth_hello.py  test_goth_requestor.py  test_index_cram.py  test_index_split_cram.py  test_split_cram.py  trigger_k8s_tests.py
workflows/: container_tasks.py  dir_test.py  file_test.py  files_dynamic_shell_task.py  flyte_haplotypecaller.py  gatk_best_practices.py  golem_reg_task.py  golem_test.py  golem_utils.py  haplotypecaller.py  hello_golem.py  pod_templates.py  tasks.py  test_wf.py  util_tasks.py  utils.py
(+209 files in other folders)
