[tool.poetry]
name = "coacervate-requestor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "coacervate_requestor"}]

[tool.poetry.dependencies]
python = "^3.10"
yapapi = "^0.9.2"
black = "21.7b0"

[tool.poetry.group.test.dependencies]
goth = "^0.13.0"
pysam = "^0.19.1"
pytest = "^7.1.3"
icecream = "^2.1.3"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"

log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
