[tool.poetry]
name = "coacervate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "coacervate"}]

[tool.poetry.dependencies]
python = "^3.10"
yapapi = "^0.10.0"
black = "21.7b0"
ya-aioclient = "^0.6.4"
pysam = "^0.20.0"
kubernetes = "^25.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
icecream = "^2.1.3"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
